--- a/src/component/trainingProgram/TrainingProgram.module.css
+++ b/src/component/trainingProgram/TrainingProgram.module.css
@@ -3,17 +3,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1em;
-z-index: 10;
+    padding: 1em;
+    z-index: 10;
+    background-color: black;
+    padding: 100px 0;
 }
-.mainContainer h1{
-/* size: 20rem; */
-z-index: 0;
+
+.mainContainer h1 {
+    /* size: 20rem; */
+    z-index: 0;
+    color: white;
 }
 
 
 .carousal {
-    /* background-color: black; */
+    /* background-color: white; */
     color: red;
     min-height: 200px;
     min-width: 250px;
@@ -48,11 +52,15 @@ z-index: 0;
 
 }
 
+.carousal b{
+    z-index: 10;
+}
+
 .carousal img {
     height: 100%;
     width: 250px;
-    opacity: 0.4;
-    z-index: -1;
+    opacity: 0.6;
+    z-index: 5;
     margin-top: -43px;
     /* border: 1px solid black ; */
     border-radius: 2px;
@@ -65,18 +73,20 @@ z-index: 0;
     gap: 50px;
     color: red;
 }
+
 .buttonContainer span {
     cursor: pointer;
 }
-.icon{
-     cursor: pointer;
-     padding: 5px;
-     height: 20px;
-     width: 20px;
-     border: 1px solid black;
-     border-radius: 50%;
 
- }
+.icon {
+    cursor: pointer;
+    padding: 5px;
+    height: 20px;
+    width: 20px;
+    border: 1px solid black;
+    border-radius: 50%;
+
+}
 
 
 @media screen and (max-width:840px) {
@@ -105,9 +115,10 @@ z-index: 0;
         /* height: 25rem; */
         height: 100%;
 
-        
+
     }
-    .buttonContainer{
+
+    .buttonContainer {
         visibility: hidden;
     }
 }
