--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -1,8 +1,14 @@
 .container{
     display: flex;
     flex-direction: column;
-    padding: 3rem;
-    background-color: #0e0d0dc5;
+    padding-top: 3rem ;
+    background-color: black;
+}
+.container > div{
+    width: 50% ;
+    margin: auto;
+    padding-top: 100px;
+    border-bottom: 2px dashed gray;
 }
 .transparentBackground {
     width: 100%;
@@ -14,10 +20,12 @@
     background-image: linear-gradient(to top, #0000000f, #202124);
 }
 iframe{
-   max-width: 15rem;
+    width: 40%;
     height: 20rem;
 }
 .about{
+    width: 80%;
+    margin: auto;
     display: flex;
 }
 .about button{
@@ -31,11 +39,15 @@ iframe{
     background-color: red;
 }
 .choose{
+    width: 80%;
+    margin: auto;
+
     display: flex;
     flex-direction: row-reverse;
 }
 
 .content{
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -52,11 +64,15 @@ iframe{
         align-items: center;
     }
     .content{
-        margin: 1rem 0;
+        /* margin: 1rem 0; */
+        width: 100%;
         align-items: center;
     }
+    .content button{
+        margin: 30px 0;
+    }
     iframe{
-        max-width: 20rem;
-         height: 20rem;
+        width: 100%;
+        height: 20rem;
      }
 }
