--- a/src/pages/Signin/Signin.module.css
+++ b/src/pages/Signin/Signin.module.css
@@ -64,7 +64,7 @@ input[type="email"] {
   margin-bottom: 20px;
 }
 
-button {
+.button {
   padding:10px;
   background-color: #ff7f50;
   border: none;
@@ -77,7 +77,7 @@ button {
   border-radius: 20px;
 }
 
-button:hover {
+.button:hover {
   background-color: #ff6347;
 }
 
