--- a/src/component/trainingProgram/TrainingProgram.module.css
+++ b/src/component/trainingProgram/TrainingProgram.module.css
@@ -81,11 +81,13 @@
 .icon {
     cursor: pointer;
     padding: 5px;
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     border: 1px solid black;
     border-radius: 50%;
+    background-color: rgb(61, 61, 61);
 
+    /* padding: 10px; */
 }
 
 
