--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -59,7 +59,7 @@ input[type="email"] {
   margin-top: 5px;
 }
 
-button {
+.button {
   padding:10px;
   background-color: #ff7f50;
   border: none;
@@ -72,7 +72,7 @@ button {
   border-radius: 20px;
 }
 
-button:hover {
+.button:hover {
   background-color: #ff6347;
   cursor: pointer;
 }
